--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       <div id="app">
         <div id="statusPanel"></div>
         <div id="controlPanel">
-          <button id="sensor" title="sensor">🌐</button>
+          <button id="geoLocation" title="sensor">🌐</button>
           <button id="north" title="north">⬆️</button>
           <button id="south" title="south">⬇️</button>
           <button id="west" title="west">⬅️</button>
